5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1721_3069.log
== TEST (2019-05-02 18:12:16) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd = int(input("Digite o valor dos dois dados de 8 faces: "))


if(na == "furia" .upper()):
	d = 10 + vd
	print(d)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:13:32) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:43) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:16:39) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:20:55) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper() and vd1 == min(1) and vd1 == max(8)):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:14) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper() and vd1 == min(1) and vd1 == max(8)):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:29:56) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper() and vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 ==8):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:39) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))


if(na == "furia" .upper() and vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 ==8):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:32:32) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8):
	print("Entrada valida")
elif(na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
Entrada valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:43) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 5
    if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 na == "furia" .upper()):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:03) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:16) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:45) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:57) 
-- CODE:
na = str(input("Digite o nome do ataque: "))
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:24) 
-- CODE:
na = str(input("Digite o nome do ataque: ") .upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:00) 
-- CODE:
na = str(input("Digite o nome do ataque: ") .upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:17) 
-- CODE:
na = str(input("Digite o nome do ataque: ") .upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "furia" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "grito" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "toque" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:03) 
-- CODE:
na = str(input("Digite o nome do ataque: ") .upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "FURIA" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:16) 
-- CODE:
na = str(input("Digite o nome do ataque: ") .upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "FURIA" .upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO" .upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE" .upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:29) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8 and na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:37) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8):
elif(na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 6
    elif(na == "FURIA".upper()):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:57) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8):
	print("s")
elif(na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:47:03) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if(vd1 > 0 or vd1 == 8 and vd2 > 0 or vd2 == 8):
	print("s")
elif(na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:10) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if((0 < vd1 <= 8 and 0 < vd2 <= 8) and na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:26) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if((0 < vd1 <= 8 and 0 < vd2 <= 8) and na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:49:35) 
-- CODE:
na = str(input("Digite o nome do ataque: ").upper())
vd1 = int(input("Digite o valor do dado 1 de 8 faces: "))
vd2 = int(input("Digite o valor do dado 2 de 8 faces: "))

if((0 < vd1 <= 8 and 0 < vd2 <= 8) and na == "FURIA".upper()):
	d = 10 + vd1 + vd2
	print(d)
elif(na == "GRITO".upper()):
	d = 6 + vd1 + vd2
	print(d)
elif(na == "TOQUE".upper()):
	d = (vd1 + vd2) ** 2
	print(d)
else:
	print("Entrada invalida")
	
-- EXECUTION TIME:
0.128329
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
